# ai-learn

.claude/: settings.local.json
demo/: .gitignore  企业知识库设计方案.md
demo/.claude/: settings.local.json
demo/knowledge-base/: README.md  TESTING.md  TEST_SUMMARY.md  docker-compose.yml  test_chat.py  test_search.py
demo/knowledge-base/backend/: .env  .env.example  Dockerfile  diagnose.py  import_json.py  inspect_milvus.py  pyproject.toml  requirements.txt  test_chat_api.py  test_chat_api_curl.py  test_retrieval.py
demo/knowledge-base/backend/app/: main.py
demo/knowledge-base/backend/app/api/: deps.py
demo/knowledge-base/backend/app/api/v1/: __init__.py  chat.py  conversations.py  documents.py
demo/knowledge-base/backend/app/core/: config.py  database.py
demo/knowledge-base/backend/app/models/: __init__.py  audit.py  base.py  conversation.py  document.py  user.py
demo/knowledge-base/backend/app/schemas/: __init__.py  chat.py  common.py  document.py  user.py
demo/knowledge-base/backend/app/services/ingestion/: __init__.py
demo/knowledge-base/backend/app/services/llm/: __init__.py
demo/knowledge-base/backend/app/services/retrieval/: __init__.py
demo/knowledge-base/backend/app/services/vector/: __init__.py
demo/knowledge-base/backend/tests/: test_api.py  test_services.py
demo/knowledge-base/frontend/: Dockerfile  package-lock.json  package.json
demo/knowledge-base/frontend/.next/: trace
demo/knowledge-base/frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
demo/knowledge-base/scripts/: dev.bat  dev.sh
(+119 files in other folders)
